--- a/templates/register.html
+++ b/templates/register.html
@@ -41,9 +41,9 @@
                     </div>
                   </div>
 
-                <div class="form-group">
-                    <button class="btn btn-success" type="submit">Register!</button>
-                </div>
+
+                    <button class="btn btn-primary btn-settings" type="submit">Register!</button>
+
             </fieldset>
     </form>
 </div>
