--- a/templates/userbio.html
+++ b/templates/userbio.html
@@ -35,10 +35,11 @@
          </fieldset>
     </form>
 
-                <p><h6>Or search a Giphy in our database</h6></p>
-            <input id = "searchtext" type = "text" placeholder = "Search GIF">
-            <button id = "searchgifs" type = "submit" >PRESS</button>
-            <div class=inner></div>
+    <p><h6>Or search a Giphy in our database</h6></p>
+    <input id = "searchtext" type = "text" placeholder = "Example: Shrek">
+    <button id = "searchgifs" type = "submit" >Search</button>
+    <div class=inner></div>
+
     </div>
 </div>
 
