--- a/static/styles.css
+++ b/static/styles.css
@@ -18,10 +18,12 @@
   text-align: center;
 }
 
-.image {
+.image
+{
+  min-width: 400px;
   display: block;
   width: 100%;
-  height: auto;
+  height: 400px;
 }
 
 
@@ -95,7 +97,24 @@
 .pic-btn-low
 {
   position: absolute;
-  top: 70%;
+  top: 60%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  border: 1px solid white;
+	color: white;
+	background-color: transparent;
+	border-radius: 5px;
+}
+
+.pic-btn-high
+{
+  position: absolute;
+  top: 45%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -152,24 +171,22 @@
     margin: 0;
 }
 
-.jumbotron-custom1
-{
-    background: white;
-    font-family: 'Roboto', sans-serif;
-    color: #213159;
-    height: 100px;
-    text-align: center;
-    padding: 40px;
-    margin: 0;
-}
-
 .jumbotron-custom2
 {
     background: transparent;
     color: #213159;
     height: 100px;
     padding: 40px;
-    margin: 0;
+    margin-bottom: 40px;
+}
+
+.jumbotron-custom1
+{
+    background: transparent;
+    color: #213159;
+    height: 100px;
+    padding: 40px;
+    margin-bottom: 130px;
 }
 
 .lead
@@ -183,7 +200,6 @@
     font-size: 30px;
     font-weight: 700;
 }
-
 
 body
 {
@@ -203,11 +219,10 @@ body
 
 .card
 {
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
-  margin-bottom: 10px; /* Added */
-  height: 300px;
-  margin-top: 5% !important;
+  margin: 0 auto;
+  float: none;
+  height: 350px;
+  margin-top: 1.5% !important;
   text-align: center;
 }
 
@@ -216,8 +231,9 @@ main
   padding-top: 50px;
 }
 
-.row row-1
+.row-1
 {
+    margin-top: 70px !important;
     margin: 4%;
     text-align: center;
 }
@@ -226,19 +242,22 @@ main
 {
     display: inline-block;
     width: 300px;
-    height: auto;
+    height: 200px;
     background: #ccc;
     margin: 5px;
+    border-radius: 2%;
 }
 
 .btn-settings
 {
-  top: 90%;
-  left: 50%;
+  top: 95%;
+  left: 50% !important;
   text-align: center;
+  float: none;
   background-color: transparent;
   color: #213159;
   border: 1px solid #213159;
+  margin-top: 5px;
 }
 
 .btn-settings:hover
@@ -318,7 +337,7 @@ main
 
 .card-upload
 {
-  height: 450px;
+  height: 310px;
 }
 
 .btn-upload
@@ -334,17 +353,22 @@ main
   top: 80% !important;
 }
 
-.form
+.form-group
 {
-  text-align: left !important;
+  text-align: left;
+}
+
+.form1
+{
+  text-align: center;
 }
 
 .card-register
 {
-  height: 400px;
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
-  margin-bottom: 10px; /* Added */
+  height: 420px;
+  margin: 0 auto;
+  float: none;
+  margin-bottom: 10px;
   margin-top: 5% !important;
   text-align: center;
 }
@@ -381,16 +405,4 @@ main
   width: 100px;
   height: 100px;
   border-radius: 50%;
-}
-
-.card-first
-{
-  background-color: black !important;
-  color: white;
-}
-
-.card img
-{
-  width: auto;
-  height: 200px;
 }
