--- a/templates/login.html
+++ b/templates/login.html
@@ -10,20 +10,24 @@
     <form action="{{ url_for('login') }}" method="post">
         <fieldset>
             <div class="form-group">
+                <label for="username">Username</label>
                 <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
             </div>
             <div class="form-group">
+                <label for="password">Password</label>
                 <input class="form-control" name="password" placeholder="Password" id="password" type="password"/>
             </div>
 
+            <p>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1" onclick="myFunction()">
                 <label class="form-check-label" for="inlineRadio1">Show password</label>
             </div>
+            </p>
 
-            <div class="form-group">
-                <button class="btn btn-default btn-login" type="submit">Log In</button>
-            </div>
+
+                <button class="btn btn-default btn-settings" type="submit">Log In</button>
+
         </fieldset>
     </form>
   </div>
