--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,59 +4,40 @@
 
 {% block main %}
 
+<div class="jumbotron jumbotron-fluid jumbotron-custom2">
+    <div class="container1">
+        <p class="lead1">Profile</p>
+    </div>
+</div>
+
 <div class="card" style="width: 35rem;">
-<h5 class="card-header">Profile</h5>
+<h5 class="card-header">{{username}}</h5>
   <div class="card-body">
-    <img src="{{ url_for('static', filename = 'shrek.gif')}}" class="profile-pic">
-    <h5 class="card-title">Hi there, I'm {{username}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">{{userbio}}</h6>
-    <a href="#" class="btn btn-success btn-follow">Follow</a>
+    <img src="{{profilepicture}}" class="profile-pic">
+    <p><h5 class="card-title">Hi there, I'm {{firstname}} {{surname}}</h5></p>
+    <p><h6 class="card-subtitle mb-2 text-muted">{{userbio}}</h6></p>
   </div>
 </div>
 
 <div class="jumbotron jumbotron-fluid jumbotron-custom2">
     <div class="container1">
         <p class="lead1">Most recent pictures</p>
+        <p class="lead">Click on a picture to view it in full size!</p>
     </div>
 </div>
 
-<div class="row row-1">
+<div class="row justify-content-center row-1">
+  <div class="column">
 
     {% for image in pictures %}
 
-    <div class="card" style="width: 19rem;">
-      <img src="{{ image.cars }}" class="card-img-top" alt="Cars">
-      <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="{{ image.cars }}" class="btn btn-primary">Full size</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 19rem;">
-      <img src="{{ image.hotels }}" class="card-img-top" alt="Hotels">
-      <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="{{ image.hotels }}" class="btn btn-primary">Full size</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 19rem;">
-      <img src="{{ image.yachts }}" class="card-img-top" alt="Yachts">
-      <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="{{ image.yachts }}" class="btn btn-primary">Full size</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 19rem;">
-      <img src="{{ image.watches }}" class="card-img-top" alt="Watches">
-      <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="{{ image.watches }}" class="btn btn-primary">Full size</a>
-      </div>
-    </div>
+      <a target="_blank" href="{{ image.cars }}"><img src="{{ image.cars }}"></a>
+      <a target="_blank" href="{{ image.hotels }}"><img src="{{ image.hotels }}"></a>
+      <a target="_blank" href="{{ image.watches }}"><img src="{{ image.watches }}"></a>
+      <a target="_blank" href="{{ image.yachts }}"><img src="{{ image.yachts }}"></a>
 
     {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
