--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,13 +8,13 @@
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#password">Password</a>
+                <a class="nav-link active" data-toggle="tab" href="#password"><span class="fas fa-key"></span>Password</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#name">Username</a>
+                <a class="nav-link" data-toggle="tab" href="#name"><span class="fas fa-user-tag"></span>Username</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#bio">Biography</a>
+                <a class="nav-link" data-toggle="tab" href="#bio"><span class="fas fa-signature"></span>Biography</a>
             </li>
         </ul>
     </div>
@@ -33,9 +33,8 @@
                     <input class="form-control" name="new_password" placeholder="New password" type="password">
                 </div>
 
-                <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-settings">Change</button>
-                </div>
+
             </form>
 
         </div>
@@ -49,9 +48,9 @@
                     <input class="form-control" name="new_username" placeholder="New username" type="text">
                 </div>
 
-                <div class="form-group">
+
                 <button type="submit" class="btn btn-primary btn-settings">Change</button>
-                </div>
+
             </form>
 
         </div>
@@ -64,12 +63,13 @@
                     <textarea class="form-control" name="new_bio" placeholder="New biography" rows="5"></textarea>
                 </div>
 
-                <div class="form-group">
+
                 <button type="submit" class="btn btn-primary btn-settings">Change</button>
-                </div>
+
             </form>
 
         </div>
+
     </div>
 
 </div>
