--- a/templates/userbio.html
+++ b/templates/userbio.html
@@ -29,13 +29,14 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-default" type="submit">Create!</button>
+                <button class="btn btn-light btn-settings" type="submit">Create!</button>
             </div>
 
          </fieldset>
     </form>
 
     <p><h6>Or search a Giphy in our database</h6></p>
+    <p>You have to save and upload the file</p>
     <input id = "searchtext" type = "text" placeholder = "Example: Shrek">
     <button id = "searchgifs" type = "submit" >Search</button>
     <div class=inner></div>
