--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     <img src="static/{{cats[2]}}" alt="{{cats[0]}}" class="image">
     <div class="overlay">
       <div class="text">#{{cats[0]}}</div>
-      <a href="{{ url_for('cats') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ cat }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -44,7 +44,7 @@
     <img src= "static/{{cats[3]}}" alt= {{cats[1]}} class="image" id="image">
     <div class="overlay">
       <div class="text">#{{cats[1]}}</div>
-      <a href="{{ url_for('cats') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ cat1 }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 </div>
