--- a/static/styles.css
+++ b/static/styles.css
@@ -221,7 +221,7 @@ body
 {
   margin: 0 auto;
   float: none;
-  height: 350px;
+  height: auto;
   margin-top: 1.5% !important;
   text-align: center;
 }
@@ -279,22 +279,20 @@ main
     height: 50vh;
 }
 
-.btn-follow
+.btn-unfollow
 {
-  position: absolute;
   background-color: transparent;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  border: 1px solid green;
+  left: 50% !important;
+  border: 1px solid red;
   color: black;
   text-align: center;
-  width: 100px;
-  top: 80% !important;
+  width: auto;
+  top: 95%;
 }
 
-.btn-follow:hover
+.btn-unfollow:hover
 {
-  background-color: green;
+  background-color: red;
   border: 1px solid white;
   color: white;
 }
@@ -338,6 +336,12 @@ main
 .card-upload
 {
   height: 310px;
+}
+
+.card-userbio
+{
+  height: 715px;
+  margin-bottom: 5%;
 }
 
 .btn-upload
@@ -405,4 +409,9 @@ main
   width: 100px;
   height: 100px;
   border-radius: 50%;
+}
+
+.searchgif
+{
+  margin-bottom: 20px;
 }
