--- a/templates/login.html
+++ b/templates/login.html
@@ -11,11 +11,11 @@
         <fieldset>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
+                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input class="form-control" name="password" placeholder="Password" id="password" type="password"/>
+                <input class="form-control" name="password" placeholder="Password" id="password" type="password" required>
             </div>
 
             <p>
