--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -4,21 +4,57 @@
 
 {% block main %}
 
+<div class="jumbotron jumbotron-fluid jumbotron-custom2">
+    <div class="container1">
+        <p class="lead1">Profile</p>
+    </div>
+</div>
 
 <div class="card" style="width: 35rem;">
 <h5 class="card-header">{{username}}</h5>
   <div class="card-body">
-    <img src="{{ url_for('static', filename = 'shrek.gif')}}" class="profile-pic">
-    <h5 class="card-title">Hi there, {{firstname}} {{surname}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">{{bio}}</h6>
+    <img src="{{ profilepicture }}" class="profile-pic">
+    <p><h5 class="card-title">Hi there, {{firstname}} {{surname}}</h5></p>
+    <p><h6 class="card-subtitle mb-2 text-muted">{{bio}}</h6></p>
 
+
+{% if not user_id in following1 %}
     <form action="{{ url_for('follow')}}" method= "POST">
-      <input type="hidden" id="test" name="follow" value="{{ username }}">
-      <button class="btn btn-success btn-follow">Follow</button>
+      <input type="hidden" id="test" name="follow" value="{{ user_id }}">
+      <button class="btn btn-success btn-settings">Follow</button>
     </form>
+
+{% else %}
+
+    <form action="{{ url_for('unfollow')}}" method= "POST">
+      <input type="hidden" id="test" name="unfollow" value="{{ user_id }}">
+      <button class="btn btn-success btn-unfollow">Unfollow</button>
+    </form>
+
+{% endif %}
 
   </div>
 </div>
 
+<div class="jumbotron jumbotron-fluid jumbotron-custom2">
+    <div class="container1">
+        <p class="lead1">Most recent pictures</p>
+        <p class="lead">Click on a picture to view it in full size!</p>
+    </div>
+</div>
+
+<div class="row justify-content-center row-1">
+  <div class="column">
+
+    {% for image in pictures %}
+
+      <a target="_blank" href="{{ image.cars }}"><img src="{{ image.cars }}"></a>
+      <a target="_blank" href="{{ image.hotels }}"><img src="{{ image.hotels }}"></a>
+      <a target="_blank" href="{{ image.watches }}"><img src="{{ image.watches }}"></a>
+      <a target="_blank" href="{{ image.yachts }}"><img src="{{ image.yachts }}"></a>
+
+    {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
