--- a/templates/following.html
+++ b/templates/following.html
@@ -21,15 +21,14 @@
             {% for f in following %}
         <tr>
         <td>
-            {{f}}
+            {{f[1]}}
         </td>
 
         <td></form><form action="{{ url_for('user_profile')}}" method= "POST"><input type="hidden" id="test"
-                                        name="follow" value="{{f}}"><button class = "btn btn-success btn-settings">Profile</button></form></td>
+                                        name="follow" value="{{f[0]}}"><button class = "btn btn-success btn-settings">Profile</button></form></td>
         </tr>
             {% endfor %}
     </tbody>
 </table>
-
 
 {% endblock %}
