--- a/templates/top.html
+++ b/templates/top.html
@@ -6,6 +6,21 @@
 
 <div class="jumbotron jumbotron-fluid jumbotron-custom2">
     <div class="container1">
+        <p class="lead1">Most liked picture</p>
+        <p class="lead">Click on a picture to view it in full size!</p>
+    </div>
+</div>
+
+<div class="row justify-content-center row-1">
+  <div class="column">
+      <a target="_blank" href="{{picurl}}"><img src="{{picurl}}"></a>
+    </div>
+</div>
+
+
+
+<div class="jumbotron jumbotron-fluid jumbotron-custom2">
+    <div class="container1">
         <p class="lead1">Ranking</p>
     </div>
 </div>
