--- a/static/styles.css
+++ b/static/styles.css
@@ -415,3 +415,17 @@ main
 {
   margin-bottom: 20px;
 }
+
+.table
+{
+  margin-bottom: 5%;
+}
+
+.column1 img
+{
+    display: inline-block;
+    width: 450px;
+    height: 300px;
+    background: #ccc;
+    margin-top: 40px;
+}
