--- a/templates/top.html
+++ b/templates/top.html
@@ -7,17 +7,19 @@
 <div class="jumbotron jumbotron-fluid jumbotron-custom2">
     <div class="container1">
         <p class="lead1">Most liked picture</p>
-        <p class="lead">Click on a picture to view it in full size!</p>
+        <p class="lead">This picture was made by {{firstname}} {{surname}} and got {{likes}} likes!</p>
+        <form action="{{ url_for('user_profile')}}" method= "POST">
+            <input type="hidden" id="test" name="follow" value="{{ user_id }}">
+            <button class="btn btn-success btn-settings">View profile</button>
+        </form>
     </div>
 </div>
 
 <div class="row justify-content-center row-1">
-  <div class="column">
+  <div class="column1">
       <a target="_blank" href="{{picurl}}"><img src="{{picurl}}"></a>
     </div>
 </div>
-
-
 
 <div class="jumbotron jumbotron-fluid jumbotron-custom2">
     <div class="container1">
@@ -41,6 +43,5 @@
             {% endfor %}
         </tbody>
     </table>
-
 
 {% endblock %}
