--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -14,7 +14,7 @@
 <h5 class="card-header">{{username}}</h5>
   <div class="card-body">
     <img src="{{ profilepicture }}" class="profile-pic">
-    <p><h5 class="card-title">Hi there, {{firstname}} {{surname}}</h5></p>
+    <p><h5 class="card-title">Hi there, I'm {{firstname}} {{surname}}</h5></p>
     <p><h6 class="card-subtitle mb-2 text-muted">{{bio}}</h6></p>
 
 
