--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 
-<div class="card" style="width: 35rem;">
+<div class="card card-register" style="width: 35rem;">
 <h5 class="card-header">Log in</h5>
   <div class="card-body">
     <form action="{{ url_for('login') }}" method="post">
